2010-02-26  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Fraser.

        Add support for Widgets 1.0: View Mode Media Feature
        https://bugs.webkit.org/show_bug.cgi?id=35446

        Add hooks to the Qt DRT for testing the view mode media feature.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setViewModeMediaFeature):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

2010-03-29  Adam Barth  <abarth@webkit.org>

        Unreviewed.  Update expected results for unit tests.

        * Scripts/webkitpy/tool/bot/sheriffircbot_unittest.py:
        * Scripts/webkitpy/tool/commands/sheriffbot_unittest.py:

2010-03-29  Adam Barth  <abarth@webkit.org>

        Unreviewed.  I think Eric meant svn_revision.

        * Scripts/webkitpy/tool/commands/sheriffbot.py:

2010-03-26  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        webkit-patch commit-queue should notice if it breaks builders (and roll out its own changes)
        https://bugs.webkit.org/show_bug.cgi?id=29311

        Now that we have sheriff-bot watching the tree, it can post
        rollout patches on behalf of the commit queue.

        * Scripts/webkitpy/common/checkout/commitinfo.py: add responsible_parties()
        * Scripts/webkitpy/common/checkout/commitinfo_unittest.py: test responsible_parties()
        * Scripts/webkitpy/tool/commands/sheriffbot.py:
         - Break IRC logic out into _post_irc_warning for easier testing.
         - Add _post_rollout_patch for posting rollout patches to bugzilla.
        * Scripts/webkitpy/tool/commands/sheriffbot_unittest.py:
         - Test _rollout_reason
        * Scripts/webkitpy/tool/grammar.py:
         - Fix join_with_separators to not add Adam's "oxford comma" for two item lists.
        * Scripts/webkitpy/tool/grammar_unittest.py:
         - Test join_with_separators

2010-03-29  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.
